log
Sat 20 Aug 2022 01:14:15 AM UTC: 
 tests:  0|6
total_score: 0/70
adbe7f1
Sat 20 Aug 2022 01:36:14 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   33 |   list -> first = NULL;
      |        ^~
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   35 |   list -> last = NULL;
      |        ^~
Compilation failed
4ec8500
Sat 20 Aug 2022 01:38:22 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
30bc67b
Sat 20 Aug 2022 01:40:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aaf8430
